# pipewire-gobject

./: .clang-tidy  .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  meson.build  meson_options.txt  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: api_proposal.yml  bug_report.yml  community_feedback.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pages.yml  release.yml
docs/: community-feedback.md  pwg.toml  pwg.toml.in  rationale.md  release.md  roadmap.md  support-policy.md  system-dependencies.md
docs/api/: getting-started.md  main-loop-and-registry.md  pipewire-version-policy.md
examples/python/: audio_blocks.py  default_metadata.py  graph_summary.py  list_clients.py  list_devices.py  list_globals.py  list_graph.py  list_links.py  list_node_params.py  list_nodes.py  list_ports.py  peak_meter.py
python/pipewire_gobject/: __init__.py
src/: pwg-audio-block.c  pwg-audio-block.h  pwg-audio-capture.c  pwg-audio-capture.h  pwg-audio-format.c  pwg-audio-format.h  pwg-client-info.c  pwg-client-info.h  pwg-core-private.h  pwg-core.c  pwg-core.h  pwg-defs.h  pwg-device-info.c  pwg-device-info.h  pwg-device.c  pwg-device.h  pwg-error.c  pwg-error.h  pwg-global-private.h  pwg-global.c  pwg-global.h  pwg-impl-module-private.h  pwg-impl-module.c  pwg-impl-module.h  pwg-link-info.c  pwg-link-info.h  pwg-link.c  pwg-link.h  pwg-metadata-info.c  pwg-metadata-info.h  pwg-metadata.c  pwg-metadata.h  pwg-node-info.c  pwg-node-info.h  pwg-node.c  pwg-node.h  pwg-param-info-private.h  pwg-param-info.c  pwg-param-info.h  pwg-param-private.h  (+12 more)
tests/: test_gir_metadata.py  test_import.py  test_live_pipewire.py  test_live_stream_audio.py  test_stream_dispatch.c  test_symbols.py
tools/: check_release_metadata.py  run_clang_tidy.py
